--- a/Speak/app/build.gradle
+++ b/Speak/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.3"
 
     defaultConfig {
-        applicationId "com.android.albert.Speak"
+        applicationId "com.android.albert.speak"
         minSdkVersion 17
         targetSdkVersion 23
         versionCode 1
